[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", default-features = false }
chrono-tz = "0.9.0"
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.116"
